# NoteFlow

./: .gitignore  LICENSE  README-CN.md  README.md  build_release.bat  build_tauri.bat  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts
.claude/: settings.local.json
electron/: main.ts  preload.ts
electron/services/: fileSystem.ts  store.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/database/: mod.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: mod.rs  note.rs
src-tauri/src/sync/: config.rs  mod.rs  s3_client.rs  service.rs
src/components/layout/: EmptyState.tsx  Header.tsx  MainContent.tsx  SettingsPanel.tsx  Sidebar.tsx  index.ts
src/components/notes/: NoteEditor.tsx  NoteList.tsx  index.ts
src/hooks/: index.ts  useAutoSave.ts  useNotes.ts  useSearch.ts  useTags.ts  useTheme.ts
src/stores/: folderStore.ts  index.ts  noteStore.ts  tagStore.ts  themeStore.ts
src/types/: index.ts  tauri.ts
src/utils/: date.ts  index.ts  markdown.ts  tauri.ts
