[package]
name = "noteflow"
version = "1.0.0"
description = "A modern local-first note-taking app with SQLite"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }

# SQLite (本地数据库)
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono", "uuid"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1.7", features = ["v4", "serde"] }

# 配置
config = "0.14"
directories = "5.0"

# 错误处理
thiserror = "1.0"
anyhow = "1.0"

# 日志
log = "0.4"
env_logger = "0.11"

# 云同步 (S3 兼容)
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
quick-xml = "0.31"
base64 = "0.22"
sha2 = "0.10"
md-5 = "0.10"
hex = "0.4"
hmac = "0.12"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
